--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,46 @@
-/* Star Here */
+body {
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier Ne" monospace;
+}
+
+main {
+    margin 20px;
+}
+
+ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+li {
+    display: inline-block;
+    margin-left: 10px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+a {
+    color: blue;
+    text-decoration: none;
+}
+
+article {
+    border: 1px solid red;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+a.active {
+    text-decoration: underline;
+}
